# wasm.compiler

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  uninstall.sh
examples/V3/crypto/: CMakeLists.txt
examples/V3/dispatch/: CMakeLists.txt  README.md
examples/V3/dispatch/include/: dispatch.hpp
examples/V3/dispatch/ricardian/: dispatch.contracts.md
examples/V3/dispatch/src/: CMakeLists.txt  dispatch.cpp
examples/V3/eidos/: CMakeLists.txt
examples/V3/hashtimelock/: README.txt
examples/V3/hashtimelock/ricardian/: hashtimelock.contracts.md
examples/V3/hashtimelock/src/: hashtimelock.cpp
examples/V3/hello/: CMakeLists.txt  README.md
examples/V3/hello/include/: hello.hpp
examples/V3/hello/src/: CMakeLists.txt  hello.cpp
examples/V3/index/: CMakeLists.txt
examples/V3/index/include/: index.hpp  index_entities.hpp
examples/V3/index/ricardian/: index.contracts.md
examples/V3/index/src/: CMakeLists.txt  index.cpp
examples/V3/prints/: README.md
examples/V3/rpc/: CMakeLists.txt  README.md
examples/V3/rpc/include/: rpc_get.hpp
examples/V3/rpc/ricardian/: rpc.contracts.md
examples/V3/rpc/src/: CMakeLists.txt  rpc_get.cpp
examples/V3/token/include/: token.hpp
examples/V3/token/src/: CMakeLists.txt  token.cpp
examples/V3/uniswap/: README.txt
examples/V3/uniswap/include/: uniswap.hpp  uniswap_entities.hpp  uniswap_utils.hpp
examples/V3/uniswap/src/: CMakeLists.txt  uniswap.cpp
examples/V4/ampl/: CMakeLists.txt  README.md
examples/V4/ampl/include/: ampl.hpp  ampl_database.hpp  ampl_utils.hpp
examples/V4/ampl/ricardian/: ampl.contracts.md
examples/V4/ampl/src/: CMakeLists.txt  ampl.cpp
examples/V4/call/include/: call.hpp
examples/V4/call/ricardian/: call.contracts.md
examples/V4/call/src/: CMakeLists.txt  call.cpp
examples/V4/call_with_return/: CMakeLists.txt  README.md
examples/V4/call_with_return/src/: call.cpp
examples/V4/mpas/: CMakeLists.txt  README.md
examples/V4/mpas/include/: mpas.hpp
examples/V4/mpas/ricardian/: mpas.clauses.md  mpas.contracts.md
examples/V4/mpas/src/: CMakeLists.txt  mpas.cpp
examples/V4/sushiswap/: CMakeLists.txt  README.md
examples/V4/sushiswap/include/: sushi.hpp  sushi_database.hpp  sushi_utils.hpp
examples/V4/sushiswap/ricardian/: sushi.contracts.md
examples/V4/sushiswap/src/: CMakeLists.txt  sushi.cpp
examples/V4/synthetix/: CMakeLists.txt  README.md
examples/V4/synthetix/include/: synthetix.hpp  synthetix_constants.hpp  synthetix_database.hpp  synthetix_entities.hpp  synthetix_log.hpp  synthetix_math.hpp
examples/V4/synthetix/ricardian/: waykix.clauses.md  waykix.contracts.md
examples/V4/synthetix/src/: CMakeLists.txt  synthetix.cpp  synthetix_exchange_rates.cpp  synthetix_exchange_state.cpp  synthetix_exchanger.cpp  synthetix_feepool.cpp  synthetix_feepool_state.cpp  synthetix_issuer.cpp  synthetix_state.cpp  synthetix_token_state.cpp  synthetix_unit_storage.cpp
examples/V4/token/: CMakeLists.txt  README.md
examples/V4/token/include/: token.hpp
examples/V4/token/src/: token.cpp
examples/V4/uniswap/: CMakeLists.txt  README.md
examples/V4/uniswap/include/: uniswap.hpp  (+2 more)
examples/crypto/: README.txt
examples/crypto/include/: cryptotest.hpp
examples/crypto/ricardian/: crypto.contracts.md
examples/crypto/src/: CMakeLists.txt  crypto.cpp
examples/eidos/: README.md
examples/eidos/include/: eidos.hpp
examples/eidos/src/: CMakeLists.txt  eidos.cpp
examples/hashtimelock/: CMakeLists.txt
examples/hashtimelock/include/: hashtimelock.hpp
examples/hashtimelock/ricardian/: hashtimelock.clauses.md
examples/hashtimelock/src/: CMakeLists.txt  hashtimelock.cpp
examples/hello/: CMakeLists.txt  README.txt
examples/hello/include/: hello.hpp
examples/hello/src/: CMakeLists.txt  hello.cpp
examples/prints/: CMakeLists.txt  README.md
examples/prints/include/: prints.hpp
examples/prints/src/: CMakeLists.txt  prints.cpp
examples/send_inline/: CMakeLists.txt
examples/send_inline/src/: CMakeLists.txt  send_inline.cpp
examples/test_api/: README.md
examples/token/: CMakeLists.txt  README.md
examples/token/include/: token.hpp
examples/token/ricardian/: token.contracts.md
examples/token/src/: CMakeLists.txt  token.cpp
examples/uniswap/: CMakeLists.txt
examples/uniswap/include/: uniswap.hpp
examples/uniswap/ricardian/: uniswap.contracts.md
examples/uniswap/src/: uniswap.cpp
libraries/: CMakeLists.txt
libraries/libc++/: CMakeLists.txt
libraries/libc++/libcxx/include/: new
libraries/libc++/libcxx/src/: ios.cpp  locale.cpp  wasm.cpp
libraries/libc/musl/src/stdio/: printf.c
libraries/wasmlib/: CMakeLists.txt  crypto.cpp  malloc.cpp  simple_malloc.cpp  wasmlib.cpp
libraries/wasmlib/capi/: action.h  chain.h  crypto.h  db.h  permission.h  print.h  privileged.h  system.h  transaction.h  types.h
libraries/wasmlib/contracts/: contract.hpp  db.hpp  dispatcher.hpp  inline_transaction.hpp  make_log.hpp  privileged.hpp  producer_schedule.hpp  return.hpp  system.hpp  table.hpp  wasm.hpp
libraries/wasmlib/core/: asset.hpp  binary_extension.hpp  check.hpp  crypto.hpp  datastream.hpp  exception.hpp  fixed_bytes.hpp  hash256.hpp  ignore.hpp  name.hpp  print.hpp  regid.hpp  rope.hpp  serialize.hpp  strings.hpp  symbol.hpp  time.hpp  types.h  uint128.hpp  varint.hpp  wasm_log.hpp
libraries/wasmlib/rpc/: rpc.hpp
modules/: ClangExternalProject.txt  InstallCDT.cmake  LibrariesExternalProject.txt  ToolsExternalProject.txt  WasmCDTMacros.cmake.in  WasmWasmToolchain.cmake.in  wasm.cdt-config.cmake
scripts/: generate_tarball.sh  wasm_build_darwin.sh
tests/integration/: memory_tests.cpp
tools/: CMakeLists.txt
tools/include/: compiler_options.hpp.in
tools/include/wasm/: abi.hpp  abigen.hpp  codegen.hpp  gen.hpp  utils.hpp
tools/wasm-cc/: CMakeLists.txt  wasm-cc.cpp.in  wasm-cpp.cpp  wasm-cpp.cpp.in
tools/wasm-lld/: CMakeLists.txt  wasm-lld.cpp.in
wasm_llvm/: .gitignore  .gitmodules  CMakeLists.txt
wasm_llvm/lib/Object/: WasmObjectFile.cpp
wasm_llvm/lib/Transforms/: CMakeLists.txt
wasm_llvm/tools/clang/: CMakeLists.txt
(+30 files in other folders)
